--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                         </li>
                     </ul>
+
+                    <partial name="_MenuManagePartial"/>
                 </div>
             </div>
         </nav>
